// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`replicate > reactFiber > should create App.tsx 1`] = `
"export function App(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate > reactFiber > should create a component 1`] = `
"export function A(props) {
  return <div>{"Hello"}</div>;
}
"
`;

exports[`replicate > reactFiber > should create a component 2`] = `
"import { A } from "@/components/A";
export function App(props) {
  return <A />;
}
"
`;
